--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "gulp-update": "0.0.2",
     "gulp-watch": "^5.0.0",
     "idb": "file:idb",
+    "lodash": "^4.17.11",
     "tunnel-agent": "^0.6.0"
   }
 }
+
