--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
     "node": ">=4"
   },
   "devDependencies": {
-    "babel-core": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.5.2",
-    "browser-sync": "^2.2.1",
-    "del": "^2.2.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-babel": "^6.1.1",
-    "gulp-cache": "^0.4.2",
-    "gulp-cssnano": "^2.0.0",
-    "gulp-eslint": "^3.0.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "browser-sync": "^2.26.7",
+    "del": "^2.2.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.3",
+    "gulp-cache": "^0.4.6",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
     "run-sequence": "^1.2.2",
@@ -44,12 +44,21 @@
     }
   },
   "dependencies": {
+    "ansi-colors": "^3.2.4",
+    "babel-preset-env": "^1.7.0",
+    "date-format": "^2.0.0",
+    "extend": "^3.0.2",
+    "fancy-log": "^1.3.3",
     "gulp-browserify": "^0.5.1",
     "gulp-update": "0.0.2",
-    "gulp-watch": "^5.0.0",
+    "gulp-watch": "^5.0.1",
     "idb": "file:idb",
     "lodash": "^4.17.11",
-    "tunnel-agent": "^0.6.0"
+    "lodash.template": "^4.4.0",
+    "plugin-error": "^1.0.1",
+    "replace-ext": "^1.0.0",
+    "tunnel-agent": "^0.6.0",
+    "useref": "^1.4.1",
+    "vinyl": "^2.2.0"
   }
 }
-
