--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "idb": "file:idb",
     "lodash": "^4.17.11",
     "lodash.template": "^4.4.0",
+    "package-lock.json": "^1.0.0",
     "plugin-error": "^1.0.1",
     "replace-ext": "^1.0.0",
     "tunnel-agent": "^0.6.0",
