--- a/idb/package.json
+++ b/idb/package.json
@@ -36,18 +36,18 @@
   "devDependencies": {
     "babelify": "^10.0.0",
     "browser-sync": "^2.8.2",
-    "browserify": "^16.3.0",
+    "browserify": "^16.5.0",
     "del": "^1.2.0",
     "es6-promise": "^3.0.2",
     "gulp": "^4.0.2",
-    "gulp-load-plugins": "^2.0.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-size": "^1.2.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
     "merge-stream": "^0.1.8",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.0",
     "run-sequence": "^1.1.2",
-    "uglifyify": "^3.0.1",
+    "uglifyify": "^5.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1"
@@ -65,8 +65,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "typings": "lib/idb.d.ts",
-  "version": "2.1.3",
-  "dependencies": {
-    "lodash.template": "^4.5.0"
-  }
+  "version": "2.1.3"
 }
