--- a/package.json
+++ b/package.json
@@ -44,10 +44,14 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "chai": "^4.2.0",
     "gulp-browserify": "^0.5.1",
     "gulp-update": "0.0.2",
     "gulp-watch": "^5.0.0",
     "idb": "file:idb",
+    "mocha": "^6.2.0",
+    "modernizr": "^3.7.1",
     "tar": "^4.4.13",
     "tunnel-agent": "^0.6.0"
   }
