--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-update": "0.0.2",
     "gulp-watch": "^5.0.0",
     "idb": "file:idb",
+    "lodash.template": "^4.5.0",
     "mocha": "^6.2.0",
     "modernizr": "^3.7.1",
     "tar": "^4.4.13",
