--- a/idb/package.json
+++ b/idb/package.json
@@ -67,6 +67,6 @@
   "typings": "lib/idb.d.ts",
   "version": "2.1.3",
   "dependencies": {
-    "lodash-template": "^1.0.0"
+    "lodash.template": "^4.5.0"
   }
 }
