--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-browserify": "^0.5.1",
     "gulp-update": "0.0.2",
     "gulp-watch": "^5.0.0",
+    "heroku": "^7.33.0",
     "idb": "file:idb",
     "lodash.template": "^4.5.0",
     "mocha": "^6.2.0",
