--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Restaurant Reviews",
-    "short_name": "Reviews 2",
+    "short_name": "Reviews",
     "background_color": "#fdfdfd",
     "theme_color": "#262932",
     "start_url": "index.html",
