--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.5.2",
-    "browser-sync": "^2.2.1",
+    "browser-sync": "^2.26.12",
     "del": "^2.2.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^3.0.1",
@@ -26,7 +26,7 @@
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.0.0",
-    "main-bower-files": "^2.5.0",
+    "main-bower-files": "^2.13.3",
     "run-sequence": "^1.2.2",
     "wiredep": "^4.0.0"
   },
@@ -51,13 +51,13 @@
     "gulp-update": "0.0.2",
     "gulp-watch": "^5.0.0",
     "heroku": "^7.33.0",
-    "idb": "file:idb",
+    "idb": "^5.0.4",
     "lodash.template": "^4.5.0",
     "mocha": "^6.2.0",
     "modernizr": "^3.7.1",
     "py": "0.0.0",
     "python": "0.0.4",
-    "sails": "^1.2.3",
+    "sails": "^1.2.4",
     "socket.io": "2.3.0",
     "tar": "^4.4.13",
     "tunnel-agent": "^0.6.0"
