--- a/idb/package.json
+++ b/idb/package.json
@@ -1,72 +1,38 @@
 {
-  "_from": "idb",
-  "_id": "idb@2.1.3",
-  "_inBundle": false,
-  "_integrity": "sha512-1He6QAuavrD38HCiJasi4lEEK87Y22ldFuM+ZHkp433n4Fd5jXjWKutClYFp8w4mgx3zgrjnWxL8dpjMzcQ+WQ==",
-  "_location": "/idb",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "idb",
-    "name": "idb",
-    "escapedName": "idb",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/idb/-/idb-2.1.3.tgz",
-  "_shasum": "7b295fa1a46ab7851e42dd85543a271435f87fee",
-  "_spec": "idb",
-  "_where": "C:\\Chad\\mws-restaurant-2",
-  "author": {
-    "name": "Jake Archibald"
-  },
-  "browser": "lib/idb.js",
-  "bugs": {
-    "url": "https://github.com/jakearchibald/indexeddb-promised/issues"
-  },
-  "bundleDependencies": false,
-  "deprecated": false,
-  "description": "IndexedDB but with promises",
-  "devDependencies": {
-    "babelify": "^10.0.0",
-    "browser-sync": "^2.26.12",
-    "browserify": "^16.5.0",
-    "del": "^1.2.0",
-    "es6-promise": "^3.0.2",
-    "gulp": "^4.0.2",
-    "gulp-load-plugins": "^2.0.1",
-    "gulp-size": "^1.2.3",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.6",
-    "merge-stream": "^0.1.8",
-    "mocha": "^6.2.0",
-    "run-sequence": "^1.1.2",
-    "uglifyify": "^5.0.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
-  },
-  "homepage": "https://github.com/jakearchibald/indexeddb-promised#readme",
-  "license": "ISC",
-  "main": "lib/node.js",
   "name": "idb",
+  "version": "5.0.4",
+  "description": "A small wrapper that makes IndexedDB usable",
+  "main": "build/cjs/index.js",
+  "module": "build/esm/index.js",
+  "typings": "build/esm/index.d.ts",
+  "scripts": {
+    "build": "PRODUCTION=1 rollup -c && node --experimental-modules lib/size-report.mjs",
+    "dev": "rollup -c --watch"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jakearchibald/indexeddb-promised.git"
+    "url": "git://github.com/jakearchibald/idb.git"
   },
-  "scripts": {
-    "serve": "gulp serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "typings": "lib/idb.d.ts",
-  "version": "2.1.3",
-  "dependencies": {
-    "lodash.template": "^4.5.0"
+  "files": [
+    "build/**",
+    "with-*"
+  ],
+  "author": "Jake Archibald",
+  "license": "ISC",
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "chai": "^4.2.0",
+    "conditional-type-checks": "^1.0.5",
+    "del": "^5.1.0",
+    "filesize": "^6.1.0",
+    "glob": "^7.1.6",
+    "mocha": "^7.2.0",
+    "prettier": "^2.0.5",
+    "rollup": "^2.10.9",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "typescript": "^3.9.3"
   }
 }
